--- a/containers/traefik/config/dynamic/certs_config.yaml
+++ b/containers/traefik/config/dynamic/certs_config.yaml
@@ -1,4 +1,4 @@
 tls:
   certificates:
-    - certFile: /etc/traefik/certs/_wildcard.basic-company-aspnetcore.localhost.pem
-      keyFile: /etc/traefik/certs/_wildcard.basic-company-aspnetcore.localhost-key.pem
+    - certFile: /etc/traefik/certs/_wildcard.booster-net.local.pem
+      keyFile: /etc/traefik/certs/_wildcard.booster-net.local-key.pem
