--- a/platforms/local/docker-compose.inventory.yml
+++ b/platforms/local/docker-compose.inventory.yml
@@ -14,6 +14,7 @@ services:
         - ASPNETCORE_Kestrel__Certificates__Default__Password=DevCertPassword
         - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
         - ConnectionStrings__DefaultConnection=Server=localhost;Database=${INVENTORY}.Service.Db;User ID=sa;Password=${DBPASS};TrustServerCertificate=true;
+        - App__IdentityServer=http://localhost:8001
       ports:
         - "8002"
         - "8003"
