Add data seeding mechanics

--- a/microservices/Angelo.Booster.Inventory/package.json
+++ b/microservices/Angelo.Booster.Inventory/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "inventory: build": "docker compose -f ../../platforms/local/docker-compose.inventory.yml build",
+    "inventory: build": "docker compose -f ../../platforms/local/docker-compose.inventory.yml build --no-cache",
     "inventory: up": "docker compose -f ../../platforms/local/docker-compose.inventory.yml up -d",
     "inventory: down": "docker compose -f ../../platforms/local/docker-compose.inventory.yml down -t 1"
   }
