--- a/libraries/Angelo.Booster.Libraries.Common/Angelo.Booster.Libraries.Common.csproj
+++ b/libraries/Angelo.Booster.Libraries.Common/Angelo.Booster.Libraries.Common.csproj
@@ -5,9 +5,16 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PackageId>Angelo.Booster.Libraries.Common</PackageId>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <Company>Angelo</Company>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="27.2.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.4" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
+  </ItemGroup>
 
 </Project>
