--- a/microservices/Angelo.Booster.Identity/package.json
+++ b/microservices/Angelo.Booster.Identity/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "identity: build": "docker compose -f ../../platforms/local/docker-compose.identity.yml build",
+    "identity: build": "docker compose -f ../../platforms/local/docker-compose.identity.yml build --no-cache",
     "identity: up": "docker compose -f  ../../platforms/local/docker-compose.identity.yml up -d",
     "identity: down": "docker compose -f  ../../platforms/local/docker-compose.identity.yml down -t 1"
   }
